--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     margin: 0 auto;
-    max-width: 50em;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    max-width: 70em;
+    font-family: "Lucida Console", Monaco, monospace;
     line-height: 1.5;
     padding: 4em 1em;
     color: #566b78;
+    font-size: 14px;
 }
 
 h1 {
@@ -19,7 +20,7 @@ h2 {
 h1,
 h2,
 strong {
-    font-weight: 500;
+    font-weight: 800;
     color: #333;
 }
 
